حذف الملفات الحساسة وتحديث الحماية الأمنية

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 # حماية المجلدات والملفات الحساسة للمشروع الكامل
 # ===============================================
 
+# مجلدات تحتوي على بيانات حساسة
+forendend/
+config.js
+*config.js
+
 # ملفات البيئة العامة
 .env
 .env.local
