--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "8.x"
   },
   "scripts": {
-    "start": "cd B && npm start",
+    "start": "node B/index.js",
     "build": "cd B && npm install",
     "dev": "cd B && npm run dev",
     "install-backend": "cd B && npm install",
