إعداد المشروع للرفع على AWS - Lambda, S3, CloudFront

--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "mongodb",
     "fullstack",
     "express",
-    "socket.io"
+    "socket.io",
+    "aws",
+    "lambda",
+    "s3",
+    "cloudfront"
   ],
   "author": "SalahElgarhy",
   "license": "MIT",
