--- a/B/.env.example
+++ b/B/.env.example
@@ -1,5 +1,9 @@
 # Server Configuration
 PORT=3000
+NODE_ENV=development
+
+# Frontend URL (للـ CORS)
+FRONTEND_URL=http://localhost:8080
 
 # Database Configuration
 MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/database_name
@@ -7,5 +11,18 @@ MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/database_name
 # JWT Configuration
 JWT_SECRET=your_secret_key_here
 
-# Environment
-NODE_ENV=development
+# CORS Configuration
+# للتطوير المحلي
+ALLOWED_ORIGINS=http://localhost:8080,http://127.0.0.1:8080,http://localhost:3000
+# للـ Production أضف دومين الاستضافة: https://yourdomain.com
+
+# Socket.IO Configuration
+SOCKET_CORS_ORIGIN=http://localhost:8080
+
+# Admin Settings
+ADMIN_PASSWORD=your-admin-password
+
+# Security Settings
+BCRYPT_ROUNDS=12
+ENABLE_LOGGING=true
+DEBUG_MODE=true
