🚀 Deploy: Add admin panel for production deployment
- Added admin.html to version control (private repo)
- Updated .gitignore to allow admin.html tracking
- Required for cPanel hosting deployment

--- a/forentend/.gitignore
+++ b/forentend/.gitignore
@@ -11,10 +11,10 @@
 .env.test
 
 # ⚠️ ADMIN PANEL FILES - HIGHLY SENSITIVE! ⚠️
-admin.html
+# admin.html  # Now tracked for deployment (repo is private)
 admin-access.html
-admin-*.html
 admin-real.html
+# admin-*.html  # Allows admin.html but blocks admin-test.html etc
 **/admin/**
 admin/
 order-system-guide.html
