Security: Remove sensitive MongoDB examples & personal files
- Replaced mongodb+srv://username:password with placeholders
- Updated .env.example files to use secure placeholders
- Fixed BACKEND_DEPLOYMENT.md, README-PROJECT.md, DEPLOYMENT-GUIDE.md
- Added .gitignore rules for CVs, personal docs, and admin.html
- Prevents accidental exposure of credentials on GitHub

--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,20 @@ staging/
 !*.md
 !DEPLOYMENT_GUIDE.md
 !SETUP_GUIDE.md
+
+# ملفات شخصية - CVs and Personal Documents
+**/CV*.pdf
+**/CV*.docx
+**/*Resume*.pdf
+**/*Resume*.docx
+**/Salah*.pdf
+**/Salah*.docx
+
+# ملفات دراسية
+**/*.pptx
+**/*.docx
+**/Chapter*.pptx
+**/TMA*.docx
+
+# Admin panel (محلي فقط - security)
+forentend/admin.html
