--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ HOST=localhost
 
 # ===== قاعدة البيانات =====
 MONGODB_URI=mongodb://localhost:27017/zad_mahashi
-# أو للسحابة: mongodb+srv://username:password@cluster.mongodb.net/database
+# أو للسحابة: mongodb+srv://YOUR_USERNAME:YOUR_PASSWORD@cluster.mongodb.net/YOUR_DATABASE
 
 # ===== إعدادات الأمان =====
 JWT_SECRET=your_super_secret_jwt_key_here
