--- a/B/.env.example
+++ b/B/.env.example
@@ -6,7 +6,7 @@ NODE_ENV=development
 FRONTEND_URL=http://localhost:8080
 
 # Database Configuration
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/database_name
+MONGODB_URI=your_mongodb_connection_string_here
 
 # JWT Configuration
 JWT_SECRET=your_secret_key_here
