--- a/B/.env.production.example
+++ b/B/.env.production.example
@@ -17,7 +17,7 @@ FRONTEND_URL=https://yourdomain.com
 
 # ============ Database (MongoDB Atlas) ============
 # انسخ Connection String من MongoDB Atlas
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/database-name
+MONGODB_URI=your_mongodb_connection_string_here
 
 # ============ Security ============
 # JWT Secret - استخدم قيمة عشوائية قوية
